# WeatherPredictAPI

./: LICENSE  pyproject.toml  requirements.txt
app/: model_loader.py  schemas.py
tests/: test_health.py
weather-predict-api/: README.md  activate env.txt  pyproject.toml  requirements.txt
weather-predict-api/.venv_api/: pyvenv.cfg
weather-predict-api/.venv_api/Scripts/: activate  activate.bat
weather-predict-api/app/: feature_builder.py  main.py  model_loader.py  schemas.py  utils.py
weather-predict-api/data/processed/: features_precip_daily.parquet  features_rain_daily.parquet  precip_daily.csv  rain_daily.csv
weather-predict-api/models/precipitation_fall/: best_model.joblib
weather-predict-api/models/rain_or_not/: best_model.joblib  threshold.json
weather-predict-api/tests/: test_predict.py
