[tool.poetry]
name = "open-meteo-api"
version = "0.1.0"
description = "FastAPI app for Open Meteo ML models (AT2)"
authors = ["Md Saifur Rahman <mdsaifur.rahman@student.uts.edu.au>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {version="^0.23", extras=["standard"]}
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
joblib = "^1.3"
pydantic = "^2.0"
jupyter = "^1.1.1"
notebook = "^7.4.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.27"
ruff = "^0.6.0"
jupyterlab = "^4.4.9"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
